--- a/css/css.css
+++ b/css/css.css
@@ -2,7 +2,11 @@
 @import url(https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);
 body{
 font-family: 'Droid Arabic Naskh', serif;
+font-size: 16px;
 /*font-family: 'Baloo Bhaijaan', cursive;*/
+}
+p{
+font-size: 16px;
 }
 .bg{
 background: -moz-linear-gradient(0deg, rgba(123,255,229,1) 0%, rgba(23,144,121,1) 100%); /* ff3.6+ */
@@ -71,7 +75,6 @@ opacity: 0.94;
     background-size: cover;
     background-position: center;
     position: relative;
-    margin-bottom: 40px;
     display: flex;
 }
 .banner h1 {
@@ -137,4 +140,26 @@ opacity: 0.94;
     border-right-width: 0!important;
     margin-left: 0px !important;
     margin-right: -3px !important;
+}
+button.search{
+    height: 41px;
+}
+.text_panel{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color: #f7f7f7;
+    padding: 20px;
+}
+.footer {
+    padding-top: 100px;
+    background: url(../Pattern-with-dots-and-hearts/footer.png) bottom;
+    background-size: 720px;
+    background-repeat: repeat-x;
+    /* background-color: #f5f5f5; */
+}
+.footer a {
+    padding: 10px;
+}
+h4 > .fa {
+    font-size: 22px;
 }
