--- a/TextInputEffects/css/set1.css
+++ b/TextInputEffects/css/set1.css
@@ -3,7 +3,7 @@
 	z-index: 1;
 	display: inline-block;
 	margin: 1em;
-	max-width: 350px;
+	max-width: 400px;
 	width: calc(100% - 2em);
 	vertical-align: top;
 }
@@ -461,16 +461,19 @@
 .input__label--minoru::after {
 	content: '';
   	position: absolute;
+  	right: 0;
   	top: 0;
   	z-index: -1;
   	width: 100%;
   	height: 4em;
 	box-shadow: 0px 0px 0px 0px;
-	color: rgba(199,152,157, 0.6);
+	/*color: rgba(199,152,157, 0.6);*/
+	color: rgba(102, 175, 153, 0.6);
 }
 
 .input__field--minoru:focus {
-	box-shadow: 0px 0px 0px 2px #eca29b;
+	/*box-shadow: 0px 0px 0px 2px #eca29b;*/
+	box-shadow: 0px 0px 0px 2px #66af99;
 }
 
 .input__field--minoru:focus + .input__label--minoru {
